# lexiflix

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  LICENSE  README.md  Taskfile.yml
.github/workflows/: nlp-service-deploy.yml  nlp-service-image.yml
.kiro/specs/media-detail-metadata-expansion/: .config.kiro  design.md  requirements.md  tasks.md
apps/nlp_service/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
apps/nlp_service/app/: __init__.py  main.py
apps/nlp_service/app/api/: analysis.py  health.py
apps/nlp_service/app/core/: auth.py  exceptions.py  logging.py  settings.py
apps/nlp_service/app/data/: init.py
apps/nlp_service/app/models/: __init__.py  vocabulary.py
apps/nlp_service/app/schemas/: requests.py  responses.py
apps/nlp_service/app/services/: __init__.py  cefr.py  pipeline.py  spacy_models.py  text_processing.py  token_filters.py
apps/nlp_service/bruno/: analyze-invalid-srt.bru  analyze-plain-text.bru  analyze-srt.bru  analyze_invalid_srt.bru  analyze_srt.bru  bruno.json  health.bru  ready.bru
apps/nlp_service/bruno/environments/: cloud.bru  local.bru
apps/scripts/: .gitignore  README.md  a.md  main.ipynb  main.py  pyproject.toml
apps/scripts/cli-tool/: README.md  package.json
apps/scripts/cli-tool/src/: cli.tsx
apps/scripts/data/: Spider-Man.Far.From.Home.2019.1080p.BluRay.x264-[YTS.LT]-en.srt
apps/scripts/llm-pipeline/app/: Avengers.Age.of.Ultron.2015.1080p.BluRay.x264.YIFY-en.json  main.py  pyproject.toml
apps/scripts/llm_pipeline/app/: avengers_age_of_ultron_2015_1080p_blu_ray_x264_yify_en.json  main.py
apps/scripts/python-analyzer/: README.md  pyproject.toml
apps/scripts/python-analyzer/src/: main.py
apps/scripts/python_analyzer/: pyproject.toml  readme.md
apps/scripts/python_analyzer/src/: main.py
apps/web/: .gitignore  AGENTS.md  GEMINI.md  biome.json  drizzle.config.ts  next.config.ts  next_config.ts  package.json  pnpm-lock.yaml  pnpm_lock.yaml  prompt.md  trigger.config.ts  tsconfig.json
apps/web/.github/: copilot-instructions.md
apps/web/drizzle/: 0000_chunky_power_man.sql  0000_woozy_wither.sql  0001_right_butterfly.sql  0002_spooky_oracle.sql  0003_young_starjammers.sql  0004_goofy_midnight.sql  0005_curated_catalog.sql  0006_elite_the_hand.sql  0007_pack_item_due_guard.sql  0008_wonderful_titania.sql  0009_soft_stick.sql  0010_blue_lifeboat.sql  0011_furry_komodo.sql  0012_azure_mai_sentence_audio.sql
apps/web/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0011_snapshot.json  0012_snapshot.json  _journal.json  journal.json
apps/web/lexiflix-web/: .gitignore  package.json  pnpm-lock.yaml
apps/web/lexiflix-web/src/app/: globals.css  page.tsx
apps/web/src/app/: forbidden.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts  unauthorized.tsx
apps/web/src/app/(app)/: error.tsx  layout.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/app/app/: layout.tsx  loading.tsx
apps/web/src/app/auth/: layout.tsx  page.tsx
apps/web/src/app/forgot-password/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/preferences/: page.tsx
apps/web/src/app/prefs/: page.tsx
apps/web/src/app/reset-password/: page.tsx
apps/web/src/app/signup/: page.tsx
apps/web/src/components/: app-sidebar.tsx  call-to-action.tsx  contact-us.tsx  faq.tsx  features.tsx  marketing-navbar.tsx  nav-main.tsx  nav-projects.tsx  nav-secondary.tsx
apps/web/src/components/auth/: auth-error-utils.ts  auth-tabs.tsx  forgot-password-form.tsx  google-icon.tsx  login-form.tsx  reset-password-form.tsx  signup-form.tsx
apps/web/src/components/common/: app-page-header.tsx  app-page-shell.tsx  app-surface.tsx  aurora-background.tsx  dot-background.tsx  glowing-effect.tsx  layout-text-flip.tsx  media-poster-banner.tsx  (+8 more)
apps/web/src/db/: index.ts
apps/web/src/hooks/: use-auth-client.ts
apps/web/src/lib/: action-result.ts  auth-guards.ts  auth.ts  email.ts  env.ts  site.ts  tmdb-shared.ts  tmdb.ts  vocabulary-kind-labels.ts
apps/web/src/providers/: app-providers.tsx
apps/web/src/styles/: globals.css
apps/web/src/trigger/: analyze-media-subtitles.ts  generate-content-pack.ts
apps/worker/: .gitignore  pyproject.toml
docs/: architecture.md  business rules.md  business-rules.md  codebase-consistency-standardization-plan.md  content-generation-pipeline-plan.md  core-table-rationale.md  curated-feature-plan.md  decision-log.md  decision_log.md  flashcard-srs-product-improvement-plan.md  generation-continuity-implementation-plan.md  learner-preferences-and-due-notifications-implementation-plan.md  manual-golden-path-runbook.md  media-analysis-implementation-plan.md  research-prompts.md  srs.md  streaks-notifications-audit.md
docs/architecture-latex/chapters/: 03-nextjs-application.tex
(+200 files in other folders)
