[project]
name = "lexiflix-nlp-service"
version = "0.1.0"
description = "Internal NLP microservice for LexiFlix — subtitle analysis and vocabulary extraction."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "cefrpy>=1.0.1",
  "fastapi>=0.115.0",
  "lemminflect>=0.2.3",
  "markupsafe>=2.1.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "pyinflect>=0.5.1",
  "spacy>=3.8.7",
  "spacy-transformers>=1.3.9",
  "srt>=3.5.3",
  "torch==2.8.0",
  "uvicorn[standard]>=0.34.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.optional-dependencies]
dev = [
  "basedpyright",
  "httpx>=0.28.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.25.0",
  "ruff",
]

[project.scripts]
nlp-service = "uvicorn:main"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
include = ["app"]
pythonVersion = "3.13"
typeCheckingMode = "recommended"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
reportDeprecated = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportImplicitStringConcatenation = "none"
reportPrivateImportUsage = "none"
reportMissingParameterType = "none"
reportUnannotatedClassAttribute = "none"
reportUnusedParameter = "none"
reportUnusedImport = "none"
reportUnusedCallResult = "none"
reportAny = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
