[project]
name = "scripts"
version = "0.1.0"
description = "NLP pipeline for extracting word frequencies and CEFR levels from .srt files."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cefrpy>=1.0.1",
    "lemminflect>=0.2.3",
    "pyinflect>=0.5.1",
    "spacy>=3.8.7",
    "spacy-transformers>=1.3.9",
    "srt>=3.5.3",
    "torch==2.8.0", 
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
