[project]
name = "scripts"
version = "0.1.0"
description = "NLP pipeline for extracting word frequencies and CEFR levels from .srt files."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "cefrpy>=1.0.1",
    "lemminflect>=0.2.3",
    "markupsafe>=2.1.0",
    "pyinflect>=0.5.1",
    "spacy>=3.8.7",
    "spacy-transformers>=1.3.9",
    "srt>=3.5.3",
    "torch==2.8.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.optional-dependencies]
dev = [
    "basedpyright",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
include = ["main.py"]
pythonVersion = "3.13"
typeCheckingMode = "recommended"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
reportDeprecated = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportImplicitStringConcatenation = "none"
reportPrivateImportUsage = "none"
reportMissingParameterType = "none"
reportUnannotatedClassAttribute = "none"
reportUnusedParameter = "none"
reportUnusedImport = "none"
reportUnusedCallResult = "none"
reportAny = "none"
