[project]
name = "scripts"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"

dependencies = ["google-genai>=1.59.0", "srt>=3.5.3"]

[project.optional-dependencies]
dev = ["basedpyright", "ruff"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
include = ["main.py"]
pythonVersion = "3.13"
typeCheckingMode = "recommended"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
reportDeprecated = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportImplicitStringConcatenation = "none"
reportPrivateImportUsage = "none"
reportMissingParameterType = "none"
reportUnannotatedClassAttribute = "none"
reportUnusedParameter = "none"
reportUnusedImport = "none"
reportUnusedCallResult = "none"
reportAny = "none"
